Add basic information html forms for name, email, date of birth, and submit button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
       <h1>Programming Language Suggestor</h1>
       <p>Not sure what programming laguage to learn? No worries! That's what we at <em>Programming Language Suggestor LLC</em> are here to help you with. Enter some basic information below, then fill out our survery questions and we will make a premier suggestion based on your responses.</p>
     </div>
+
+    <div class="userinfo">
+      <h3>Basic Information</h3>
+      <form>
+        <div class="form-group">
+          <label for="userName">First and last name</label>
+          <input type="userName" class="form-control" id="userNameInput" aria-describedby="emailHelp">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="emailInput">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="calender">Date of birth:</label>
+          <input id="calender" class="form-control" type="date">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
 </body>
 </html>
