Add Uset input section, html forms and submit button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+
+    <div class="userinput">
+      <h3>User Input</h3>
+      <p>Now the fun part! Make selections from the drop down boxes and we will generate a suggested programming language to learn.</p>
+      <form>
+        <h4>What's your learning style?</h4>
+        <select class="form-control" id="learning-style">
+          <option>Logical</option>
+          <option>Creative</option>
+        </select>
+        <h4>Are you an optimist or a pessimist?</h4>
+        <select class="form-control" id="opt-pes">
+          <option>Optimist</option>
+          <option>Pessimist</option>
+        </select>
+        <h4>Do you like the rain or the sun?</h4>
+        <select class="form-control" id="rain-sun">
+          <option>Optimist</option>
+          <option>Pessimist</option>
+        </select>
+        <button type="sumbit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>     
   </div>
 </body>
 </html>
