Add hidden divs to act as selectors for questins, WIP make javascript read the html forms

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <button type="submit" class="btn btn-primary" onclick="thanks()">Submit</button>
       </form>
-      <div id="outputinfo"></div>
+      <div id="output-user-info">Thanks!</div>
     </div>
 
     <div class="userinput">
@@ -59,7 +59,16 @@
         </select>
         <button type="sumbit" class="btn btn-primary">Submit</button>
       </form>
-    </div>     
+      <div id="suggestion1">
+        <p>Ruby is a wonderful language to learn for someone as bright as you are!</p>
+      </div>
+      <div id="suggestion2">
+        <p>C# is a prominent choice for someone as sharp as you are!</p>
+      </div>
+      <div id="suggestion3">
+        <p>Go is the way to go for someone as forward thinking as you are!</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
