--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="userinfo">
       <h3>Basic Information</h3>
-      <form id="info">
+      <form id="user-info">
         <div class="form-group">
           <label for="userName">First and last name</label>
           <input type="userName" class="form-control" id="userNameInput" aria-describedby="emailHelp">
@@ -41,7 +41,7 @@
     <div class="userinput">
       <h3>User Input</h3>
       <p>Now the fun part! Make selections from the drop down boxes and we will generate a suggested programming language to learn.</p>
-      <form>
+      <form id="user-input">
         <h5>What's your learning style?</h5>
         <select class="form-control" id="learning-style">
           <option>Logical</option>
@@ -59,14 +59,16 @@
         </select>
         <button type="sumbit" class="btn btn-primary">Submit</button>
       </form>
-      <div id="suggestion1">
-        <p>Ruby is a wonderful language to learn for someone as bright as you are!</p>
-      </div>
-      <div id="suggestion2">
-        <p>C# is a prominent choice for someone as sharp as you are!</p>
-      </div>
-      <div id="suggestion3">
-        <p>Go is the way to go for someone as forward thinking as you are!</p>
+      <div id="reveal">
+        <div id="suggestion1">
+          <p>Ruby is a wonderful language to learn for someone as bright as you are!</p>
+        </div>
+        <div id="suggestion2">
+          <p>C# is a prominent choice for someone as sharp as you are!</p>
+        </div>
+        <div id="suggestion3">
+          <p>Go is the way to go for someone as forward thinking as you are!</p>
+        </div>
       </div>
     </div>
   </div>
