WIP add value to options for form suggestion

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       <form id="user-input">
         <h5>What's your learning style?</h5>
         <select class="form-control" id="learning-style">
-          <option>Logical</option>
-          <option>Creative</option>
+          <option value="logical">Logical</option>
+          <option value="creative">Creative</option>
         </select>
         <h5>Are you an optimist or a pessimist?</h5>
         <select class="form-control" id="opt-pes">
-          <option>Optimist</option>
-          <option>Pessimist</option>
+          <option value="optimist">Optimist</option>
+          <option value="pessimist">Pessimist</option>
         </select>
         <h5>Do you like the rain or the sun?</h5>
         <select class="form-control" id="rain-sun">
-          <option>Rain</option>
-          <option>Sun</option>
+          <option value="rain">Rain</option>
+          <option value="sun">Sun</option>
         </select>
         <button type="sumbit" class="btn btn-primary">Submit</button>
       </form>
