--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input id="calender" class="form-control" type="date">
           <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
         </div>
-        <button type="submit" class="btn btn-primary" onclick="thanks()">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <div id="output-user-info">Thanks!</div>
     </div>
@@ -44,18 +44,18 @@
       <form id="user-input">
         <h5>What's your learning style?</h5>
           <select class="form-control" id="learning-style">
-            <option value="logical">Logical</option>
-            <option value="creative">Creative</option>
+            <option>Logical</option>
+            <option>Creative</option>
           </select>
         <h5>Are you an optimist or a pessimist?</h5>
           <select class="form-control" id="opt-pes">
-            <option value="optimist">Optimist</option>
-            <option value="pessimist">Pessimist</option>
+            <option>Optimist</option>
+            <option>Pessimist</option>
           </select>
         <h5>Do you like the rain or the sun?</h5>
           <select class="form-control" id="rain-sun">
-            <option value="rain">Rain</option>
-            <option value="sun">Sun</option>
+            <option>Rain</option>
+            <option>Sun</option>
           </select>
         <button type="sumbit" class="btn btn-primary">Submit</button>
       </form>
