--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="js/scripts.js"></script>
   <title>Programming Language Selector</title>
 </head>
-<body>
+<body></body>
   <div class="container">
     <div class="header">
       <h1>Programming Language Suggestor</h1>
